--- a/Successful/nbproject/project.properties
+++ b/Successful/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Successful
+application.vendor=Administrator
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Successful.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.cmu_time_awb.jar=C:\\Users\\Trinh Duc Anh\\Downloads\\freetts-1.2\\lib\\cmu_time_awb.jar
 file.reference.cmu_us_kal.jar=C:\\Users\\Trinh Duc Anh\\Downloads\\freetts-1.2\\lib\\cmu_us_kal.jar
@@ -73,7 +75,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Successful.Successful
+main.class=NewJframe.DictionaryJframe
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
