--- a/Successful/nbproject/project.properties
+++ b/Successful/nbproject/project.properties
@@ -31,22 +31,31 @@ endorsed.classpath=
 excludes=
 file.reference.cmu_time_awb.jar=C:\\Users\\Trinh Duc Anh\\Downloads\\freetts-1.2\\lib\\cmu_time_awb.jar
 file.reference.cmu_time_awb.jar-1=C:\\Users\\dell\\Desktop\\text to speech mbrola\\text to speech mbrola\\cmu_time_awb.jar
+file.reference.cmu_time_awb.jar-2=lib\\cmu_time_awb.jar
 file.reference.cmu_us_kal.jar=C:\\Users\\Trinh Duc Anh\\Downloads\\freetts-1.2\\lib\\cmu_us_kal.jar
 file.reference.cmu_us_kal.jar-1=C:\\Users\\dell\\Desktop\\text to speech mbrola\\text to speech mbrola\\cmu_us_kal.jar
+file.reference.cmu_us_kal.jar-2=lib\\cmu_us_kal.jar
 file.reference.cmudict04.jar=C:\\Users\\Trinh Duc Anh\\Downloads\\freetts-1.2\\lib\\cmudict04.jar
 file.reference.cmudict04.jar-1=C:\\Users\\dell\\Desktop\\text to speech mbrola\\text to speech mbrola\\cmudict04.jar
+file.reference.cmudict04.jar-2=lib\\cmudict04.jar
 file.reference.cmulex.jar=C:\\Users\\Trinh Duc Anh\\Downloads\\freetts-1.2\\lib\\cmulex.jar
 file.reference.cmulex.jar-1=C:\\Users\\dell\\Desktop\\text to speech mbrola\\text to speech mbrola\\cmulex.jar
+file.reference.cmulex.jar-2=lib\\cmulex.jar
 file.reference.cmutimelex.jar=C:\\Users\\Trinh Duc Anh\\Downloads\\freetts-1.2\\lib\\cmutimelex.jar
 file.reference.cmutimelex.jar-1=C:\\Users\\dell\\Desktop\\text to speech mbrola\\text to speech mbrola\\cmutimelex.jar
+file.reference.cmutimelex.jar-2=lib\\cmutimelex.jar
 file.reference.en_us.jar=C:\\Users\\Trinh Duc Anh\\Downloads\\freetts-1.2\\lib\\en_us.jar
 file.reference.en_us.jar-1=C:\\Users\\dell\\Desktop\\text to speech mbrola\\text to speech mbrola\\en_us.jar
+file.reference.en_us.jar-2=lib\\en_us.jar
 file.reference.freetts-jsapi10.jar=C:\\Users\\Trinh Duc Anh\\Downloads\\freetts-1.2\\lib\\freetts-jsapi10.jar
 file.reference.freetts-jsapi10.jar-1=C:\\Users\\dell\\Desktop\\text to speech mbrola\\text to speech mbrola\\freetts-jsapi10.jar
+file.reference.freetts-jsapi10.jar-2=lib\\freetts-jsapi10.jar
 file.reference.freetts.jar=C:\\Users\\Trinh Duc Anh\\Downloads\\freetts-1.2\\lib\\freetts.jar
 file.reference.freetts.jar-1=C:\\Users\\dell\\Desktop\\text to speech mbrola\\text to speech mbrola\\freetts.jar
+file.reference.freetts.jar-2=lib\\freetts.jar
 file.reference.mbrola.jar=C:\\Users\\Trinh Duc Anh\\Downloads\\freetts-1.2\\lib\\mbrola.jar
 file.reference.mbrola.jar-1=C:\\Users\\dell\\Desktop\\text to speech mbrola\\text to speech mbrola\\mbrola.jar
+file.reference.mbrola.jar-2=lib\\mbrola.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -68,7 +77,16 @@ javac.classpath=\
     ${file.reference.en_us.jar-1}:\
     ${file.reference.freetts-jsapi10.jar-1}:\
     ${file.reference.freetts.jar-1}:\
-    ${file.reference.mbrola.jar-1}
+    ${file.reference.mbrola.jar-1}:\
+    ${file.reference.cmu_time_awb.jar-2}:\
+    ${file.reference.cmu_us_kal.jar-2}:\
+    ${file.reference.cmudict04.jar-2}:\
+    ${file.reference.cmulex.jar-2}:\
+    ${file.reference.cmutimelex.jar-2}:\
+    ${file.reference.en_us.jar-2}:\
+    ${file.reference.freetts-jsapi10.jar-2}:\
+    ${file.reference.freetts.jar-2}:\
+    ${file.reference.mbrola.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
